bundles/org.openhab.binding.jellyfin/src/main/java/org/openhab/binding/jellyfin/internal/api/generated/10.10.3/docs/LiveTvOptions.md


# LiveTvOptions


## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**guideDays** | **Integer** |  |  [optional] |
|**recordingPath** | **String** |  |  [optional] |
|**movieRecordingPath** | **String** |  |  [optional] |
|**seriesRecordingPath** | **String** |  |  [optional] |
|**enableRecordingSubfolders** | **Boolean** |  |  [optional] |
|**enableOriginalAudioWithEncodedRecordings** | **Boolean** |  |  [optional] |
|**tunerHosts** | [**List&lt;TunerHostInfo&gt;**](TunerHostInfo.md) |  |  [optional] |
|**listingProviders** | [**List&lt;ListingsProviderInfo&gt;**](ListingsProviderInfo.md) |  |  [optional] |
|**prePaddingSeconds** | **Integer** |  |  [optional] |
|**postPaddingSeconds** | **Integer** |  |  [optional] |
|**mediaLocationsCreated** | **List&lt;String&gt;** |  |  [optional] |
|**recordingPostProcessor** | **String** |  |  [optional] |
|**recordingPostProcessorArguments** | **String** |  |  [optional] |
|**saveRecordingNFO** | **Boolean** |  |  [optional] |
|**saveRecordingImages** | **Boolean** |  |  [optional] |



